--- a/src/main/resources/com/example/demo4/Login_css.fxml
+++ b/src/main/resources/com/example/demo4/Login_css.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo4.LoginController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo4.LoginController">
    <children>
       <AnchorPane prefHeight="134.0" prefWidth="600.0" style="-fx-background-color: #3936ff;">
          <children>
@@ -27,28 +27,35 @@
       </AnchorPane>
       <AnchorPane layoutX="10.0" layoutY="10.0" onMouseClicked="#CreateAccount" prefHeight="541.0" prefWidth="600.0">
          <children>
-            <Text layoutX="57.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email :" wrappingWidth="52.0">
+            <Text layoutX="124.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email :" wrappingWidth="52.0">
                <font>
                   <Font size="18.0" />
                </font>
             </Text>
-            <Text layoutX="57.0" layoutY="121.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password :" wrappingWidth="85.18307685852051">
+            <Text layoutX="124.0" layoutY="121.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password :" wrappingWidth="85.18307685852051">
                <font>
                   <Font size="18.0" />
                </font>
             </Text>
-            <TextField layoutX="150.0" layoutY="40.0" prefHeight="26.0" prefWidth="333.0" promptText="Email">
+            <TextField layoutX="259.0" layoutY="40.0" prefHeight="26.0" prefWidth="333.0" promptText="Email">
                <font>
                   <Font size="18.0" />
                </font>
             </TextField>
-            <PasswordField layoutX="149.0" layoutY="94.0" prefHeight="26.0" prefWidth="334.0" promptText="Password">
+            <PasswordField layoutX="258.0" layoutY="94.0" prefHeight="26.0" prefWidth="334.0" promptText="Password">
                <font>
                   <Font size="18.0" />
                </font>
             </PasswordField>
-            <Button fx:id="CreatenewAccount" layoutX="149.0" layoutY="259.0" mnemonicParsing="false" onMouseClicked="#CreateAccount" prefHeight="35.0" prefWidth="165.0" style="-fx-background-color: #3ffc00;" text="Create new Account" textFill="WHITE" />
-            <Button layoutX="150.0" layoutY="170.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="85.0" style="-fx-background-color: #3936ff;" text="Login" textFill="WHITE" />
+            <Button fx:id="CreatenewAccount" layoutX="258.0" layoutY="265.0" mnemonicParsing="false" onMouseClicked="#CreateAccount" prefHeight="35.0" prefWidth="165.0" style="-fx-background-color: #3ffc00;" text="Create new Account" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+            <Button layoutX="259.0" layoutY="164.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="85.0" style="-fx-background-color: #3936ff;" text="Login" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+            <Text fill="RED" layoutX="258.0" layoutY="249.0" strokeType="OUTSIDE" strokeWidth="0.0" text="You don't have account? " wrappingWidth="165.60000000000014" />
          </children>
       </AnchorPane>
       <AnchorPane prefHeight="204.0" prefWidth="600.0" />
