--- a/src/main/resources/com/example/demo4/Main_css.fxml
+++ b/src/main/resources/com/example/demo4/Main_css.fxml
@@ -1,14 +1,244 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.demo4.Mainpagecontroller"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="652.0" prefWidth="833.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo4.Mainpagecontroller">
+   <top>
+      <AnchorPane prefHeight="52.0" prefWidth="834.0" style="-fx-background-color: #c7c7c7;" BorderPane.alignment="CENTER">
+         <children>
+            <ImageView fitHeight="46.0" fitWidth="45.0" layoutX="7.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@facebook.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="26.0" fitWidth="22.0" layoutX="52.0" layoutY="19.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@search.png" />
+               </image>
+            </ImageView>
+            <TextField fx:id="searchbar" layoutX="74.0" layoutY="17.0" prefHeight="26.0" prefWidth="121.0" promptText="Search for " />
+            <ImageView fitHeight="46.0" fitWidth="45.0" layoutX="247.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@home.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="46.0" fitWidth="45.0" layoutX="386.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@groups.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="46.0" fitWidth="45.0" layoutX="519.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@video (1).png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="24.0" fitWidth="26.0" layoutX="724.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@messenger.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="27.0" fitWidth="30.0" layoutX="756.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@notification-bell.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="36.0" fitWidth="31.0" layoutX="789.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@profile.png" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
+   </top>
+   <right>
+      <VBox fx:id="vbox_of_friends" prefHeight="593.0" prefWidth="218.0" BorderPane.alignment="CENTER">
+         <children>
+            <AnchorPane prefHeight="50.0" prefWidth="200.0">
+               <children>
+                  <Text fill="#595959" layoutX="14.0" layoutY="32.0" strokeType="OUTSIDE" strokeWidth="0.0" text="contacts " wrappingWidth="102.93673706054688">
+                     <font>
+                        <Font name="System Bold" size="17.0" />
+                     </font>
+                  </Text>
+                  <ImageView fitHeight="22.0" fitWidth="31.0" layoutX="136.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" style="-fx-image: #9e9393;">
+                     <image>
+                        <Image url="@search.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="163.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@menu.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="10.0" layoutY="312.0" prefHeight="50.0" prefWidth="200.0">
+               <children>
+                  <ImageView fitHeight="36.0" fitWidth="31.0" layoutX="14.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@profile.png" />
+                     </image>
+                  </ImageView>
+                  <Text layoutX="55.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="friend 1" wrappingWidth="102.93673706054688">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Text>
+               </children>
+            </AnchorPane>
+         </children>
+      </VBox>
+   </right>
+   <left>
+      <VBox prefHeight="592.0" prefWidth="198.0" BorderPane.alignment="CENTER">
+         <children>
+            <AnchorPane prefHeight="50.0" prefWidth="200.0">
+               <children>
+                  <ImageView fitHeight="36.0" fitWidth="31.0" layoutX="14.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@profile.png" />
+                     </image>
+                  </ImageView>
+                  <Text layoutX="55.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="username" wrappingWidth="102.93673706054688">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Text>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="50.0" prefWidth="200.0">
+               <children>
+                  <ImageView fitHeight="36.0" fitWidth="31.0" layoutX="14.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@friend.png" />
+                     </image>
+                  </ImageView>
+                  <Text layoutX="55.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Friends" wrappingWidth="102.93673706054688">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Text>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="10.0" layoutY="48.0" prefHeight="50.0" prefWidth="200.0">
+               <children>
+                  <ImageView fitHeight="36.0" fitWidth="31.0" layoutX="14.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@groups.png" />
+                     </image>
+                  </ImageView>
+                  <Text layoutX="55.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Groups" wrappingWidth="102.93673706054688">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Text>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="10.0" layoutY="85.0" prefHeight="50.0" prefWidth="200.0">
+               <children>
+                  <ImageView fitHeight="36.0" fitWidth="31.0" layoutX="14.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@calendar.png" />
+                     </image>
+                  </ImageView>
+                  <Text layoutX="55.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Events" wrappingWidth="102.93673706054688">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Text>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="10.0" layoutY="123.0" prefHeight="50.0" prefWidth="200.0">
+               <children>
+                  <ImageView fitHeight="36.0" fitWidth="31.0" layoutX="14.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@star.png" />
+                     </image>
+                  </ImageView>
+                  <Text layoutX="55.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Favorites" wrappingWidth="102.93673706054688">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Text>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="10.0" layoutY="160.0" prefHeight="50.0" prefWidth="200.0">
+               <children>
+                  <ImageView fitHeight="36.0" fitWidth="31.0" layoutX="14.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@video.png" />
+                     </image>
+                  </ImageView>
+                  <Text layoutX="55.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Live" wrappingWidth="102.93673706054688">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Text>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="10.0" layoutY="198.0" prefHeight="50.0" prefWidth="200.0">
+               <children>
+                  <ImageView fitHeight="36.0" fitWidth="31.0" layoutX="14.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@saved.png" />
+                     </image>
+                  </ImageView>
+                  <Text layoutX="55.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Saved" wrappingWidth="102.93673706054688">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Text>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="10.0" layoutY="236.0" prefHeight="50.0" prefWidth="200.0">
+               <children>
+                  <ImageView fitHeight="36.0" fitWidth="31.0" layoutX="14.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@memories.png" />
+                     </image>
+                  </ImageView>
+                  <Text layoutX="55.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Memories" wrappingWidth="102.93673706054688">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Text>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="10.0" layoutY="424.0" prefHeight="37.0" prefWidth="198.0" />
+         </children>
+      </VBox>
+   </left>
+   <center>
+      <ScrollPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <content>
+            <VBox fx:id="vbox_of_postes" prefHeight="686.0" prefWidth="400.0">
+               <children>
+                  <AnchorPane prefHeight="76.0" prefWidth="403.0">
+                     <children>
+                        <ImageView fitHeight="42.0" fitWidth="403.0" layoutY="42.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@Screen.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView fitHeight="42.0" fitWidth="37.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@profile.png" />
+                           </image>
+                        </ImageView>
+                        <Button layoutX="42.0" layoutY="6.0" mnemonicParsing="false" onMouseClicked="#create_post" prefHeight="26.0" prefWidth="354.0" style="-fx-background-color: #ffffff;" text="what's on your mind ?" />
+                     </children>
+                  </AnchorPane>
+               </children></VBox>
+         </content>
+      </ScrollPane>
+   </center>
+</BorderPane>
