--- a/src/main/resources/com/example/demo4/Main_css.fxml
+++ b/src/main/resources/com/example/demo4/Main_css.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -17,45 +16,49 @@
          <children>
             <ImageView fitHeight="46.0" fitWidth="45.0" layoutX="7.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@facebook.png" />
+                  <Image url="@png/facebook.png" />
                </image>
             </ImageView>
             <ImageView fitHeight="26.0" fitWidth="22.0" layoutX="52.0" layoutY="19.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@search.png" />
+                  <Image url="@png/search.png" />
                </image>
             </ImageView>
-            <TextField fx:id="searchbar" layoutX="74.0" layoutY="17.0" prefHeight="26.0" prefWidth="121.0" promptText="Search for " />
             <ImageView fitHeight="46.0" fitWidth="45.0" layoutX="247.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@home.png" />
+                  <Image url="@png/home.png" />
                </image>
             </ImageView>
             <ImageView fitHeight="46.0" fitWidth="45.0" layoutX="386.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@groups.png" />
+                  <Image url="@png/groups.png" />
                </image>
             </ImageView>
             <ImageView fitHeight="46.0" fitWidth="45.0" layoutX="519.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@video (1).png" />
+                  <Image url="@png/video (1).png" />
                </image>
             </ImageView>
             <ImageView fitHeight="24.0" fitWidth="26.0" layoutX="724.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@messenger.png" />
+                  <Image url="@png/messenger.png" />
                </image>
             </ImageView>
             <ImageView fitHeight="27.0" fitWidth="30.0" layoutX="756.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@notification-bell.png" />
+                  <Image url="@png/notification-bell.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="36.0" fitWidth="31.0" layoutX="789.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="36.0" fitWidth="31.0" layoutX="787.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@profile.png" />
+                  <Image url="@png/profile.png" />
                </image>
             </ImageView>
+            <Button fx:id="toprofile" layoutX="779.0" layoutY="16.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="34.0" mnemonicParsing="false" onMouseClicked="#open_profile" onMouseEntered="#open_profile" prefHeight="27.0" prefWidth="34.0" style="-fx-background-color: #c7c7c700;" textFill="#ff414100" AnchorPane.leftAnchor="759.2" AnchorPane.rightAnchor="21.0">
+               <font>
+                  <Font size="7.0" />
+               </font>
+            </Button>
          </children>
       </AnchorPane>
    </top>
@@ -71,12 +74,12 @@
                   </Text>
                   <ImageView fitHeight="22.0" fitWidth="31.0" layoutX="136.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" style="-fx-image: #9e9393;">
                      <image>
-                        <Image url="@search.png" />
+                        <Image url="@png/search.png" />
                      </image>
                   </ImageView>
                   <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="163.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@menu.png" />
+                        <Image url="@png/menu.png" />
                      </image>
                   </ImageView>
                </children>
@@ -85,7 +88,7 @@
                <children>
                   <ImageView fitHeight="36.0" fitWidth="31.0" layoutX="14.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@profile.png" />
+                        <Image url="@png/profile.png" />
                      </image>
                   </ImageView>
                   <Text layoutX="55.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="friend 1" wrappingWidth="102.93673706054688">
@@ -105,7 +108,7 @@
                <children>
                   <ImageView fitHeight="36.0" fitWidth="31.0" layoutX="14.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@profile.png" />
+                        <Image url="@png/profile.png" />
                      </image>
                   </ImageView>
                   <Text layoutX="55.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="username" wrappingWidth="102.93673706054688">
@@ -119,7 +122,7 @@
                <children>
                   <ImageView fitHeight="36.0" fitWidth="31.0" layoutX="14.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@friend.png" />
+                        <Image url="@png/friend.png" />
                      </image>
                   </ImageView>
                   <Text layoutX="55.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Friends" wrappingWidth="102.93673706054688">
@@ -133,7 +136,7 @@
                <children>
                   <ImageView fitHeight="36.0" fitWidth="31.0" layoutX="14.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@groups.png" />
+                        <Image url="@png/groups.png" />
                      </image>
                   </ImageView>
                   <Text layoutX="55.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Groups" wrappingWidth="102.93673706054688">
@@ -147,7 +150,7 @@
                <children>
                   <ImageView fitHeight="36.0" fitWidth="31.0" layoutX="14.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@calendar.png" />
+                        <Image url="@png/calendar.png" />
                      </image>
                   </ImageView>
                   <Text layoutX="55.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Events" wrappingWidth="102.93673706054688">
@@ -161,7 +164,7 @@
                <children>
                   <ImageView fitHeight="36.0" fitWidth="31.0" layoutX="14.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@star.png" />
+                        <Image url="@png/star.png" />
                      </image>
                   </ImageView>
                   <Text layoutX="55.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Favorites" wrappingWidth="102.93673706054688">
@@ -175,7 +178,7 @@
                <children>
                   <ImageView fitHeight="36.0" fitWidth="31.0" layoutX="14.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@video.png" />
+                        <Image url="@png/video.png" />
                      </image>
                   </ImageView>
                   <Text layoutX="55.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Live" wrappingWidth="102.93673706054688">
@@ -189,7 +192,7 @@
                <children>
                   <ImageView fitHeight="36.0" fitWidth="31.0" layoutX="14.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@saved.png" />
+                        <Image url="@png/saved.png" />
                      </image>
                   </ImageView>
                   <Text layoutX="55.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Saved" wrappingWidth="102.93673706054688">
@@ -203,7 +206,7 @@
                <children>
                   <ImageView fitHeight="36.0" fitWidth="31.0" layoutX="14.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@memories.png" />
+                        <Image url="@png/memories.png" />
                      </image>
                   </ImageView>
                   <Text layoutX="55.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Memories" wrappingWidth="102.93673706054688">
@@ -218,20 +221,20 @@
       </VBox>
    </left>
    <center>
-      <ScrollPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <ScrollPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="598.0" prefWidth="585.0" BorderPane.alignment="CENTER">
          <content>
-            <VBox fx:id="vbox_of_postes" prefHeight="686.0" prefWidth="400.0">
+            <VBox fx:id="vbox_of_postes" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="686.0" prefWidth="398.0">
                <children>
-                  <AnchorPane prefHeight="76.0" prefWidth="403.0">
+                  <AnchorPane prefHeight="82.0" prefWidth="428.0">
                      <children>
-                        <ImageView fitHeight="42.0" fitWidth="403.0" layoutY="42.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="39.0" fitWidth="411.0" layoutY="42.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@Screen.png" />
+                              <Image url="@png/Screen.png" />
                            </image>
                         </ImageView>
                         <ImageView fitHeight="42.0" fitWidth="37.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@profile.png" />
+                              <Image url="@png/profile.png" />
                            </image>
                         </ImageView>
                         <Button layoutX="42.0" layoutY="6.0" mnemonicParsing="false" onMouseClicked="#create_post" prefHeight="26.0" prefWidth="354.0" style="-fx-background-color: #ffffff;" text="what's on your mind ?" />
