--- a/src/main/resources/com/example/demo4/profile_css.fxml
+++ b/src/main/resources/com/example/demo4/profile_css.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -17,58 +18,59 @@
             <children>
                 <ImageView fitHeight="46.0" fitWidth="45.0" layoutX="7.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@facebook.png" />
+                        <Image url="@png/facebook.png" />
                     </image>
                 </ImageView>
                 <ImageView fitHeight="26.0" fitWidth="22.0" layoutX="52.0" layoutY="19.0" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@search.png" />
+                        <Image url="@png/search.png" />
                     </image>
                 </ImageView>
                 <TextField fx:id="searchbar" layoutX="74.0" layoutY="17.0" prefHeight="26.0" prefWidth="121.0" promptText="Search for " />
                 <ImageView fitHeight="46.0" fitWidth="45.0" layoutX="247.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@home.png" />
+                        <Image url="@png/home.png" />
                     </image>
                 </ImageView>
                 <ImageView fitHeight="46.0" fitWidth="45.0" layoutX="386.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@groups.png" />
+                        <Image url="@png/groups.png" />
                     </image>
                 </ImageView>
                 <ImageView fitHeight="46.0" fitWidth="45.0" layoutX="519.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@video (1).png" />
+                        <Image url="@png/video (1).png" />
                     </image>
                 </ImageView>
                 <ImageView fitHeight="24.0" fitWidth="26.0" layoutX="724.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@messenger.png" />
+                        <Image url="@png/messenger.png" />
                     </image>
                 </ImageView>
                 <ImageView fitHeight="27.0" fitWidth="30.0" layoutX="756.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@notification-bell.png" />
+                        <Image url="@png/notification-bell.png" />
                     </image>
                 </ImageView>
                 <ImageView fitHeight="36.0" fitWidth="31.0" layoutX="789.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@profile.png" />
+                        <Image url="@png/profile.png" />
                     </image>
                 </ImageView>
+            <Button fx:id="home" layoutX="253.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#gomain" onMouseEntered="#gomain" opacity="0.0" prefHeight="36.0" prefWidth="34.0" />
             </children>
         </AnchorPane>
     </top>
     <center>
         <ScrollPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <content>
-            <VBox prefHeight="602.0" prefWidth="837.0">
+            <VBox fx:id="vboxprofilepost" prefHeight="602.0" prefWidth="818.0">
                <children>
                   <AnchorPane prefHeight="270.0" prefWidth="837.0">
                      <children>
                         <ImageView fitHeight="58.0" fitWidth="57.0" layoutX="133.0" layoutY="112.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@profile.png" />
+                              <Image url="@png/profile.png" />
                            </image>
                         </ImageView>
                         <Text layoutX="198.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="user name">
@@ -79,27 +81,27 @@
                         <Line endX="484.0" layoutX="234.0" layoutY="167.0" startX="-127.0" />
                         <ImageView fitHeight="631.0" fitWidth="604.0" layoutX="117.0" layoutY="-492.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@together-nebula-5120x5120-20026.jpg" />
+                              <Image url="@png/together-nebula-5120x5120-20026.jpg" />
                            </image>
                         </ImageView>
                         <ImageView fitHeight="44.0" fitWidth="627.0" layoutX="107.0" layoutY="167.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@Screenshot(242).png" />
+                              <Image url="@png/Screenshot(242).png" />
                            </image>
                         </ImageView>
                         <ImageView fitHeight="74.0" fitWidth="443.0" layoutX="230.0" layoutY="212.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@Screenshot(243).png" />
+                              <Image url="@png/Screenshot(243).png" />
                            </image>
                         </ImageView>
                         <ImageView fitHeight="48.0" fitWidth="36.0" layoutX="230.0" layoutY="218.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@Screenshot(245).png" />
+                              <Image url="@png/Screenshot(245).png" />
                            </image>
                         </ImageView>
                         <ImageView fitHeight="34.0" fitWidth="34.0" layoutX="231.0" layoutY="211.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@profile.png" />
+                              <Image url="@png/profile.png" />
                            </image>
                         </ImageView>
                      </children>
