--- a/src/main/resources/com/example/demo4/post.fxml
+++ b/src/main/resources/com/example/demo4/post.fxml
@@ -77,7 +77,7 @@
                   </Label>
                   <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="424.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@th%20(1).jpeg" />
+                        <Image url="@share.jpeg" />
                      </image>
                   </ImageView>
                   <Label layoutX="474.0" layoutY="14.0" text="share">
