--- a/src/main/resources/com/example/demo4/profile_css.fxml
+++ b/src/main/resources/com/example/demo4/profile_css.fxml
@@ -68,7 +68,7 @@
                <children>
                   <AnchorPane prefHeight="270.0" prefWidth="837.0">
                      <children>
-                        <ImageView fitHeight="58.0" fitWidth="57.0" layoutX="133.0" layoutY="112.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="58.0" fitWidth="57.0" layoutX="133.0" layoutY="110.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@png/profile.png" />
                            </image>
@@ -79,7 +79,7 @@
                            </font>
                         </Text>
                         <Line endX="484.0" layoutX="234.0" layoutY="167.0" startX="-127.0" />
-                        <ImageView fitHeight="631.0" fitWidth="604.0" layoutX="117.0" layoutY="-492.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="631.0" fitWidth="604.0" layoutX="107.0" layoutY="-489.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@png/together-nebula-5120x5120-20026.jpg" />
                            </image>
@@ -104,6 +104,7 @@
                               <Image url="@png/profile.png" />
                            </image>
                         </ImageView>
+                        <Button layoutX="643.0" layoutY="138.0" mnemonicParsing="false" onMouseClicked="#editprofile" onMouseEntered="#editprofile" text="edit profile" />
                      </children>
                   </AnchorPane>
                   <AnchorPane prefHeight="303.0" prefWidth="692.0">
