--- a/src/main/resources/com/example/demo4/Main_css.fxml
+++ b/src/main/resources/com/example/demo4/Main_css.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="652.0" prefWidth="833.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo4.Mainpagecontroller">
+<BorderPane fx:id="mainborderbane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseMoved="#prepar" prefHeight="652.0" prefWidth="833.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo4.Mainpagecontroller">
    <top>
       <AnchorPane prefHeight="52.0" prefWidth="834.0" style="-fx-background-color: #c7c7c7;" BorderPane.alignment="CENTER">
          <children>
@@ -111,7 +111,7 @@
                         <Image url="@png/profile.png" />
                      </image>
                   </ImageView>
-                  <Text layoutX="55.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="username" wrappingWidth="102.93673706054688">
+                  <Text fx:id="username" layoutX="55.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="username" wrappingWidth="102.93673706054688">
                      <font>
                         <Font size="14.0" />
                      </font>
