--- a/src/main/resources/com/example/demo4/making_post.fxml
+++ b/src/main/resources/com/example/demo4/making_post.fxml
@@ -3,19 +3,18 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo4.Createpostcontroller">
    <top>
-      <AnchorPane prefHeight="112.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="66.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <padding>
             <Insets left="5.0" right="5.0" />
          </padding>
@@ -35,25 +34,23 @@
                   <Image url="@png/profile.png" />
                </image>
             </ImageView>
-            <Label layoutX="56.0" layoutY="56.0" prefHeight="20.0" prefWidth="86.0" text="username">
+            <Label fx:id="usernametf" layoutX="56.0" layoutY="56.0" prefHeight="20.0" prefWidth="86.0" text="username">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <MenuButton layoutX="56.0" layoutY="84.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="60.0" text="private ">
-              <items>
-                <MenuItem mnemonicParsing="false" text="Action 1" />
-                <MenuItem mnemonicParsing="false" text="Action 2" />
-              </items>
-               <font>
-                  <Font name="System Bold" size="10.0" />
-               </font>
-            </MenuButton>
+            <RadioButton fx:id="puplic" layoutX="265.0" layoutY="61.0" mnemonicParsing="false" text="puplic">
+               <toggleGroup>
+                  <ToggleGroup fx:id="postscope" />
+               </toggleGroup>
+            </RadioButton>
+            <RadioButton fx:id="friends" layoutX="347.0" layoutY="61.0" mnemonicParsing="false" text="friends" />
+            <Button fx:id="gomainpage" layoutX="558.0" layoutY="13.0" mnemonicParsing="false" onMouseClicked="#gomainpage" opacity="0.0" prefHeight="26.0" prefWidth="26.0" />
          </children>
       </AnchorPane>
    </top>
    <center>
-      <TextArea prefHeight="156.0" prefWidth="600.0" BorderPane.alignment="CENTER" />
+      <TextArea fx:id="contentofpost" prefHeight="156.0" prefWidth="600.0" BorderPane.alignment="CENTER" />
    </center>
    <bottom>
       <AnchorPane prefHeight="153.0" prefWidth="600.0" BorderPane.alignment="CENTER">
@@ -63,7 +60,7 @@
                   <Image url="@png/tab.jpg" />
                </image>
             </ImageView>
-            <Button layoutX="24.0" layoutY="112.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="553.0" text="post" textFill="#070000">
+            <Button fx:id="donenewpost" layoutX="24.0" layoutY="112.0" mnemonicParsing="false" onMouseClicked="#donenewpost" prefHeight="30.0" prefWidth="553.0" style="-fx-background-color: #3325ff;" text="post" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
