--- a/src/main/resources/com/example/demo4/profile_css.fxml
+++ b/src/main/resources/com/example/demo4/profile_css.fxml
@@ -62,9 +62,9 @@
         </AnchorPane>
     </top>
     <center>
-        <ScrollPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+        <ScrollPane prefWidth="200.0" BorderPane.alignment="CENTER">
          <content>
-            <VBox fx:id="vboxprofilepost" prefHeight="602.0" prefWidth="818.0">
+            <VBox prefHeight="592.0" prefWidth="830.0">
                <children>
                   <AnchorPane prefHeight="270.0" prefWidth="837.0">
                      <children>
@@ -104,6 +104,11 @@
                               <Image url="@png/profile.png" />
                            </image>
                         </ImageView>
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane prefHeight="303.0" prefWidth="692.0">
+                     <children>
+                        <VBox fx:id="vboxprofilepost" layoutX="137.0" layoutY="9.0" prefWidth="501.0" />
                      </children>
                   </AnchorPane>
                </children>
