--- a/src/main/resources/com/example/demo4/Main_css.fxml
+++ b/src/main/resources/com/example/demo4/Main_css.fxml
@@ -62,45 +62,6 @@
          </children>
       </AnchorPane>
    </top>
-   <right>
-      <VBox fx:id="vbox_of_friends" prefHeight="598.0" prefWidth="156.0" BorderPane.alignment="CENTER">
-         <children>
-            <AnchorPane>
-               <children>
-                  <Text fill="#595959" layoutX="14.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="contacts " wrappingWidth="86.93673706054688">
-                     <font>
-                        <Font name="System Bold" size="17.0" />
-                     </font>
-                  </Text>
-                  <ImageView fitHeight="22.0" fitWidth="31.0" layoutX="101.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" style="-fx-image: #9e9393;">
-                     <image>
-                        <Image url="@png/search.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="123.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@png/menu.png" />
-                     </image>
-                  </ImageView>
-               </children>
-            </AnchorPane>
-            <AnchorPane layoutX="10.0" layoutY="312.0">
-               <children>
-                  <ImageView fitHeight="36.0" fitWidth="31.0" layoutX="14.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@png/profile.png" />
-                     </image>
-                  </ImageView>
-                  <Text layoutX="45.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="friend 1" wrappingWidth="90.13668823242188">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Text>
-               </children>
-            </AnchorPane>
-         </children>
-      </VBox>
-   </right>
    <left>
       <VBox prefHeight="598.0" prefWidth="175.0" BorderPane.alignment="CENTER">
          <children>
@@ -221,7 +182,7 @@
       </VBox>
    </left>
    <center>
-      <ScrollPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="501.0" BorderPane.alignment="CENTER">
+      <ScrollPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="598.0" prefWidth="489.0" BorderPane.alignment="CENTER">
          <content>
             <VBox fx:id="vbox_of_postes" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefWidth="500.0">
                <children>
@@ -244,4 +205,59 @@
          </content>
       </ScrollPane>
    </center>
+   <right>
+      <AnchorPane prefHeight="598.0" prefWidth="153.0" BorderPane.alignment="CENTER">
+         <children>
+            <ScrollPane layoutX="-1.0" prefHeight="286.0" prefWidth="156.0">
+               <content>
+                  <VBox fx:id="vbox_of_friends">
+                     <children>
+                        <AnchorPane>
+                           <children>
+                              <Text fill="#595959" layoutX="14.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="contacts " wrappingWidth="86.93673706054688">
+                                 <font>
+                                    <Font name="System Bold" size="17.0" />
+                                 </font>
+                              </Text>
+                              <ImageView fitHeight="22.0" fitWidth="31.0" layoutX="101.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" style="-fx-image: #9e9393;">
+                                 <image>
+                                    <Image url="@png/search.png" />
+                                 </image>
+                              </ImageView>
+                              <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="123.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@png/menu.png" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </AnchorPane>
+                     </children>
+                  </VBox>
+               </content>
+            </ScrollPane>
+            <ScrollPane layoutX="-1.0" layoutY="286.0" prefHeight="311.0" prefWidth="156.0">
+               <content>
+                  <VBox fx:id="vbox_of_Suggestions">
+                     <children>
+                        <AnchorPane>
+                           <children>
+                              <Text fill="#595959" layoutX="6.0" layoutY="28.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Suggestions" wrappingWidth="86.93673706054688">
+                                 <font>
+                                    <Font name="System Bold" size="15.0" />
+                                 </font>
+                              </Text>
+                              <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="116.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@png/menu.png" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </AnchorPane>
+                     </children>
+                  </VBox>
+               </content>
+            </ScrollPane>
+         </children>
+      </AnchorPane>
+   </right>
 </BorderPane>
