--- a/src/main/resources/com/example/demo4/profile_css.fxml
+++ b/src/main/resources/com/example/demo4/profile_css.fxml
@@ -73,7 +73,7 @@
                               <Image url="@png/profile.png" />
                            </image>
                         </ImageView>
-                        <Text layoutX="198.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="user name">
+                        <Text fx:id="username" layoutX="198.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="user name">
                            <font>
                               <Font size="14.0" />
                            </font>
