--- a/src/main/resources/com/example/demo4/friendconversation.fxml
+++ b/src/main/resources/com/example/demo4/friendconversation.fxml
@@ -51,7 +51,15 @@
          <content>
             <VBox fx:id="massagevbox" prefWidth="363.0">
                <children>
-                  <Label fx:id="messagelable" text="Messages" />
+                  <AnchorPane prefHeight="0.0" prefWidth="363.0">
+                     <children>
+                        <Label fx:id="messagelable" alignment="CENTER" layoutX="134.0" text="Messages">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </AnchorPane>
                </children></VBox>
          </content>
       </ScrollPane>
